[gd_scene load_steps=6 format=3 uid="uid://bqgvv4aj86joc"]

[ext_resource type="Script" path="res://assets/scripts/globals.gd" id="1_f4gri"]
[ext_resource type="AudioStream" uid="uid://bvi12n5x0j1ib" path="res://assets/audio/music/Drunken Sailor.mp3" id="2_j680w"]
[ext_resource type="AudioStream" uid="uid://qv2ivhfyawtg" path="res://assets/audio/music/Leave Her Johny.mp3" id="3_4yuss"]
[ext_resource type="AudioStream" uid="uid://yqnhmljaysoa" path="res://assets/audio/music/shanty 64.mp3" id="4_n834q"]
[ext_resource type="AudioStream" uid="uid://dc3v0tvs2xfrp" path="res://assets/audio/music/OceanBreeze.wav" id="5_vdfco"]

[node name="Globals" type="Node"]
script = ExtResource("1_f4gri")

[node name="wave_timer" type="Timer" parent="."]
one_shot = true

[node name="wave_warning" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="wave_cooldown" type="Timer" parent="."]
one_shot = true

[node name="DrunkenSailor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_j680w")
bus = &"attack_phase"

[node name="LeaveHerJohnny" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4yuss")
volume_db = -7.0
bus = &"fishing_phase"

[node name="Shanty64" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n834q")

[node name="WindyWaves" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vdfco")
volume_db = -10.15
bus = &"fishing_phase"

[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="wave_warning" to="." method="_on_wave_warning_timeout"]
[connection signal="timeout" from="wave_cooldown" to="." method="_on_wave_cooldown_timeout"]
